# GenAI-Journey

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: eval.yml  eval_prompt_audit.yml
01-data-profiling-cli/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
01-data-profiling-cli/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
01-data-profiling-cli/.github/ISSUE_TEMPLATE/: bug_report.md
01-data-profiling-cli/.github/workflows/: ci.yml  pages.yml  release-drafter.yml
01-data-profiling-cli/dataprof/: __main__.py  cli.py
01-data-profiling-cli/docs/source/: changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst
01-data-profiling-cli/docs/source/modules/: dataprof.rst  index.rst
01-data-profiling-cli/scripts/: aggregate-chunks.py
01-data-profiling-cli/tests/: test_cli.py
02-prompt-audit-notebook/: .pre-commit-config.yaml  pyproject.toml  pytest.ini
02-prompt-audit-notebook/.github/workflows/: eval.yml
02-prompt-audit-notebook/notebooks/: Prompt_Audit.ipynb
02-prompt-audit-notebook/src/audit_eval/: cli.py  dataset.py  grader.py  report.py
02-prompt-audit-notebook/src/prompt_audit/: __init__.py  client.py  demo.py  settings.py  templating.py  utils.py
02-prompt-audit-notebook/src/prompt_audit/templates/: example_pair.md  examples.yml  system.j2  user.j2
02-prompt-audit-notebook/tests/: test_eval.py  test_live_prompt.py  test_run_prompt.py
