[tool.poetry]
name        = "dataprof"
version     = "0.1.0"
description = ""
authors     = ["rken <aspjscript@hotmail.com>"]
readme      = "README.md"
packages    = [{ include = "dataprof" }]

[tool.poetry.dependencies]
python              = ">=3.11,<3.13"
click               = ">=8.2.1,<9.0.0"
pandas              = ">=1.3.0,<2.2.0"
numpy               = ">=1.26.4,<1.27.0"
pysqlite3-binary    = ">=0.5.4,<0.6.0"
ydata-profiling     = ">=4.16.1,<5.0.0"
setuptools          = ">=80.9.0,<81.0.0"
pytest              = "^7.0"

[tool.poetry.extras]
validation = ["great-expectations"]        # users opt in via pip install .[validation] :contentReference[oaicite:1]{index=1}

[tool.poetry.scripts]
dataprof = "dataprof.cli:cli"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
