[tool.poetry]
name        = "dataprof"
version     = "0.1.0"
description = "A fast, extensible CLI for profiling tabular data with HTML/JSON reports and optional Great Expectations integration."
authors     = ["rken <aspjscript@hotmail.com>"]
readme      = "README.md"
license     = "MIT"
keywords    = ["data", "profiling", "CLI", "reports", "ydata-profiling", "Great Expectations"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

packages = [
  { include = "dataprof" }
]

[tool.poetry.dependencies]
python              = ">=3.11,<3.13"
click               = ">=8.2.1,<9.0.0"
pandas              = ">=1.3.0,<2.2.0"
numpy               = ">=1.26.4,<1.27.0"
pysqlite3-binary    = ">=0.5.4,<0.6.0"
ydata-profiling     = ">=4.16.1,<5.0.0"
setuptools          = ">=80.9.0,<81.0.0"
typer               = { extras = ["all"], version = "^0.16.0" }
cloup               = "^3.0.7"

[tool.poetry.extras]
validation = ["great-expectations"]

[tool.poetry.scripts]
dataprof = "dataprof.cli:cli"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.12.1"
isort = "^6.0.1"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
