[tool.poetry]
name        = "dataprof"
version     = "0.1.4"
description = "A fast, extensible CLI for profiling tabular data, with optional sampling, outlier detection, and Great Expectations integration."
readme      = "README.md"
license     = "MIT"
authors     = ["rken <aspjscript@hotmail.com>"]
homepage    = "https://github.com/rkendev/dataprof"
repository  = "https://github.com/rkendev/dataprof"
keywords    = ["data", "profiling", "CLI", "reports", "sampling", "validation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
setuptools          = ">=60.0.0"
python              = ">=3.11,<3.13"
click               = ">=8.2.1,<9.0.0"
pandas              = ">=1.3.0,<2.2.0"
numpy               = ">=1.26.4,<1.27.0"
pysqlite3-binary    = ">=0.5.4,<0.6.0"
ydata-profiling     = ">=4.16.1,<5.0.0"
typer               = {extras = ["all"], version = "^0.16.0"}
cloup               = "^3.0.7"

[tool.poetry.extras]
validation = ["great-expectations"]

[tool.poetry.group.dev.dependencies]
pytest              = "^7.0"
pre-commit          = "^3.4.0"
great-expectations  = "^1.5.3"

[tool.poetry.scripts]
dataprof = "dataprof.cli:cli"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
